base: Add option to cycle through ringer modes [1/2]
* Settings->System->Gestures->Prevent ringing

idoybh edits: We should play a sound when going from silent to ringer
do this instead of haptic feedback, same as we do for volume panel
was suggested by poad42

Signed-off-by: rituj <ritujbeniwal@gmail.com>
Change-Id: I334bd165e970665ac5300d387a0ea6745748d3ad
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/core/res/res/values/ex_symbols.xml
+++ b/core/res/res/values/ex_symbols.xml
@@ -90,6 +90,9 @@
     <java-symbol type="string" name="systemui_restart_title" />
     <java-symbol type="string" name="systemui_restart_message" />
 
+    <!-- Cycle through ringer modes -->
+    <java-symbol type="string" name="volume_dialog_ringer_guidance_normal" />
+
     <!-- Pocket Lock -->
     <java-symbol type="layout" name="pocket_lock_view" />
 
