--- a/core/res/res/values/ex_strings.xml
+++ b/core/res/res/values/ex_strings.xml
@@ -44,6 +44,9 @@
     <string name="systemui_restart_title">SystemUI restart required</string>
     <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
 
+    <!-- Cycle through ringer modes -->
+    <string name="volume_dialog_ringer_guidance_normal">Calls and notifications will ring</string>
+
     <!-- Pocket Lock -->
     <string name="pocket_view_title">Pocket mode is on</string>
     <string name="pocket_view_title_cancel">To use your phone:</string>
