SystemUI: allow changing the length of gesture navbar[1/2]
* forward ported from 11 and improved a lot by delegating all the dirty work to controllers and using LayoutParams for changing the width instead of screwing around in onDraw.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Ibdf88461a489b84fb73fa304cd0b73e0fbef163c

--- a/packages/SystemUI/res/values/ex_dimens.xml
+++ b/packages/SystemUI/res/values/ex_dimens.xml
@@ -40,4 +40,9 @@
 
     <!-- Screen Record -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
+
+    <!-- Additional gesture navbar lengths -->
+    <dimen name="navigation_home_handle_width_medium">110dp</dimen>
+    <dimen name="navigation_home_handle_width_long">140dp</dimen>
+
 </resources>
