--- a/packages/SystemUI/res/values/ex_strings.xml
+++ b/packages/SystemUI/res/values/ex_strings.xml
@@ -202,5 +202,10 @@
 
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Press and hold power button to unlock</string>
+
+    <string name="app_picker_dialog_title">Select an app</string>
+    <string name="active_edge_app_select_title">Select app</string>
+    <string name="active_edge_activity_select_title">Select activity</string>
+
 </resources>
 
