SystemUI: Introduce Battery Landscape [1/2]
Inspiration from Ancient ROM, thanks to Kakek for helps...

Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: Icc40356ebe5a2978c771c97d1f73ee0c2bf104b7

--- a/packages/SystemUI/res/values/ex_dimens.xml
+++ b/packages/SystemUI/res/values/ex_dimens.xml
@@ -34,6 +34,10 @@
     <dimen name="status_bar_battery_bigcircle_icon_height">20.5dp</dimen>
      <!-- Width of the big battery circle icon in the status bar. -->
     <dimen name="status_bar_battery_bigcircle_icon_width">20.5dp</dimen>
+    <!-- Height of the landscape battery icon in the status bar. -->
+    <dimen name="status_bar_battery_icon_height_landscape">12.5dp</dimen>
+    <!-- Width of the landscape battery icon in the status bar. -->
+    <dimen name="status_bar_battery_icon_width_landscape">24dp</dimen>
 
     <!-- Old style mobile data indicators -->
     <dimen name="status_bar_mobile_signal_with_type_width">18dp</dimen>
